# apigateway

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  test_docker_compose.yml
apigateway/: rgate.py
apigateway/route/: route_config.py  router.py  routing_statistics.py  utils.py
backend/: rgate.py
backend/applications/: application_containers.py
backend/applications/orders/: Dockerfile  index.html
backend/applications/payments/: Dockerfile  index.html
backend/route/: route_config.py  router.py  routing_statistics.py  utils.py
tests/: conftest.py  test_backend_applications.yml
tests/route/: test_application_containers.py  test_route_config.py  test_router.py  test_routing_statistics.py  test_utils.py
